fixes from rebase

--- a/airbyte-webapp/src/components/ui/Callout/Callout.module.scss
+++ b/airbyte-webapp/src/components/ui/Callout/Callout.module.scss
@@ -9,11 +9,11 @@
   align-items: center;
 }
 
-.yellow {
+.default {
   background-color: colors.$yellow-100;
 }
 
-.red {
+.error {
   background-color: colors.$red-50;
 }
 
@@ -21,6 +21,6 @@
   background-color: colors.$blue-50;
 }
 
-.blueBold {
+.boldInfo {
   background-color: colors.$blue-200;
 }
